# pyfibre_jupyterlab

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml
jupyter-config/nb-config/: pyfibre_jupyterlab.json  pyfibre_lab.json
jupyter-config/server-config/: pyfibre_jupyterlab.json  pyfibre_lab.json
pyfibre_jupyterlab/: __init__.py  handlers.py
pyfibre_lab/: __init__.py
src/: handler.ts  index.ts  widget.tsx
